--- a/public/style.css
+++ b/public/style.css
@@ -215,6 +215,11 @@ a , a:hover{
 
 
 /*admin-photos*/
+#admin-index div.arrow:hover{
+    color:rgb(0, 0, 255);
+}
+ 
+/*admin-photos*/
 #admin-photos #allphoto .photo_wrap{
     width:100%;
     height:150px;
